# Seq-CALC

./: .gitignore  CMakeLists.txt  README.md
PCAparams/: PCAmean.txt  PCAtransformMatrix.txt
demo/: demo.cpp  someTest.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test4_2.cpp  test5.cpp
docs/: _config.yml  index.md
include/deeplcd/: deeplcd.h
src/deeplcd/: deeplcd.cpp
